fix: :lipstick: frontpage hero text too big

--- a/styles/dist.css
+++ b/styles/dist.css
@@ -2768,4 +2768,9 @@ html.dark {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
